♻️ Migrar controladores de Thymeleaf a REST API para Angular
- Convertir todos los @Controller a @RestController
- Eliminar métodos que retornaban vistas HTML- Implementar respuestas JSON en todos los endpoints
- Cambiar URLs base a /api/ para consistencia
- Actualizar SecurityConfig para manejar CSRF con Angular
- Configurar CookieConfig con SameSite=Lax para Angular
- Mantener todos los servicios y repositorios sin cambios

Controladores afectados:
- AdminController, CajeroController, CocineroController
- DeliveryController, CarritoController, DireccionController
- FavoritoController, FileController, LocalController
- MenuController, PaginasController, PagoController
- PedidoController, PostLoginController, ProductoFinalController
- RegistroController, ReportesController, SigueTuPedidoController
- UsuarioController, AccesoDenegadoController, CustomErrorController